# python-boundaries

./: .gitignore  LICENSE  README.md  pyproject.toml  run_checks.py
.github/workflows/: boundary_checks.yml  lint_type_checks.yml
tests/: __init__.py  test_checker.py  test_integration.py
